--- a/RTL/Makefile
+++ b/RTL/Makefile
@@ -7,7 +7,7 @@ DEFINES=makedefines SERIAL=32'h${SERIAL} PRODID=${PRODID}
 
 CABLE=usb21
 
-CPLDFITFLAGS=-loc on -slew slow -init low -terminate keeper -optimize density -keepio
+CPLDFITFLAGS=-loc on -slew slow -init low -terminate keeper -optimize speed -keepio
 
 .PHONY:	all clean
 
