RTL: Pinswaps + Implement bank selection for Flash

--- a/RTL/CIDER.ucf
+++ b/RTL/CIDER.ucf
@@ -1,3 +1,4 @@
+
 NET "ADDR<1>"  LOC = "P90"  ;
 NET "ADDR<10>"  LOC = "P82"  ;
 NET "ADDR<11>"  LOC = "P77"  ;
@@ -22,50 +23,54 @@ NET "ADDR<7>"  LOC = "P85"  ;
 NET "ADDR<8>"  LOC = "P86"  ;
 NET "ADDR<9>"  LOC = "P81"  ;
 NET "AS_n"  LOC = "P53"  ;
-NET "BA<0>"  LOC = "P29"  ;
-NET "BA<1>"  LOC = "P32"  ;
+NET "BA<0>"  LOC = "P27"  ;
+NET "BA<1>"  LOC = "P29"  ;
 NET "BERR_n"  LOC = "P70"  ;
-NET "CAS_n"  LOC = "P24"  ;
+NET "CAS_n"  LOC = "P20"  ;
 NET "CFGIN_n"  LOC = "P95"  ;
-NET "CKE"  LOC = "P27"  ;
+NET "CKE"  LOC = "P25"  ;
 NET "DBUS<12>"  LOC = "P59"  ;
 NET "DBUS<13>"  LOC = "P58"  ;
 NET "DBUS<14>"  LOC = "P61"  ;
 NET "DBUS<15>"  LOC = "P60"  ;
-NET "DQMH"  LOC = "P22"  ;
-NET "DQML"  LOC = "P19"  ;
+NET "DQMH"  LOC = "P19"  ;
+NET "DQML"  LOC = "P17"  ;
 NET "DTACK_n"  LOC = "P56"  ;
 NET "ECLK"  LOC = "P71"  ;
-NET "FLASH_CE_n"  LOC = "P97"  ;
-NET "IDEBUF_OE"  LOC = "P6"  ;
-NET "IDECS1_n"  LOC = "P2"  ;
-NET "IDECS2_n"  LOC = "P3"  ;
-NET "IDEEN"  LOC = "P50"  ;
-NET "IDE_ROMEN"  LOC = "P99"  ;
-NET "IOR_n"  LOC = "P96"  ;
-NET "IORDY"  LOC = "P4"  ;
-NET "IOW_n"  LOC = "P1"  ;
+NET "FLASH_A19"  LOC = "P96"  ;
+NET "FLASH_BANK"  LOC = "P8"  ;
+NET "FLASH_CE_n"  LOC = "P99"  ;
+NET "FLASH_EN_n"  LOC = "P50"  ;
+NET "IDE_ROMEN"  LOC = "P1"  ;
+NET "IDEBUF_OE"  LOC = "P7"  ;
+NET "IDECS1_n"  LOC = "P3"  ;
+NET "IDECS2_n"  LOC = "P4"  ;
+NET "IDEEN_n"  LOC = "P49"  ;
+NET "IOR_n"  LOC = "P97"  ;
+NET "IORDY"  LOC = "P6"  ;
+NET "IOW_n"  LOC = "P2"  ;
 NET "LDS_n"  LOC = "P55"  ;
-NET "MA<0>"  LOC = "P36"  ;
-NET "MA<1>"  LOC = "P39"  ;
-NET "MA<10>"  LOC = "P34"  ;
-NET "MA<11>"  LOC = "P30"  ;
-NET "MA<2>"  LOC = "P41"  ;
-NET "MA<3>"  LOC = "P43"  ;
-NET "MA<4>"  LOC = "P46"  ;
-NET "MA<5>"  LOC = "P42"  ;
-NET "MA<6>"  LOC = "P40"  ;
-NET "MA<7>"  LOC = "P37"  ;
-NET "MA<8>"  LOC = "P35"  ;
-NET "MA<9>"  LOC = "P33"  ;
-NET "MEMCLK"  LOC = "P23"  ;
+NET "MA<0>"  LOC = "P34"  ;
+NET "MA<1>"  LOC = "P36"  ;
+NET "MA<10>"  LOC = "P32"  ;
+NET "MA<11>"  LOC = "P28"  ;
+NET "MA<2>"  LOC = "P39"  ;
+NET "MA<3>"  LOC = "P41"  ;
+NET "MA<4>"  LOC = "P42"  ;
+NET "MA<5>"  LOC = "P40"  ;
+NET "MA<6>"  LOC = "P37"  ;
+NET "MA<7>"  LOC = "P35"  ;
+NET "MA<8>"  LOC = "P33"  ;
+NET "MA<9>"  LOC = "P30"  ;
 NET "MEMCLK"  BUFG = "CLK" ;
-NET "MEMW_n"  LOC = "P20"  ;
+NET "MEMCLK"  LOC = "P23"  ;
+NET "MEMW_n"  LOC = "P18"  ;
 NET "OVR_n"  LOC = "P94"  ;
-NET "RAM_J1"  LOC = "P49"  ;
-NET "RAMCS_n"  LOC = "P28"  ;
-NET "RAMOE_n"  LOC = "P18"  ;
-NET "RAS_n"  LOC = "P25"  ;
+NET "RAM_EN_n"  LOC = "P43"  ;
+NET "RAMCS_n"  LOC = "P24"  ;
+NET "RAMOE_n"  LOC = "P16"  ;
+NET "RANGER_EN_n"  LOC = "P46"  ;
+NET "RAS_n"  LOC = "P22"  ;
 NET "RESET_n"  LOC = "P72"  ;
 NET "RW"  LOC = "P54"  ;
 NET "UDS_n"  LOC = "P52"  ;
