RTL: Force flash to upper bank during early boot

--- a/RTL/CIDER.ucf
+++ b/RTL/CIDER.ucf
@@ -37,8 +37,9 @@ NET "DQMH"  LOC = "P19"  ;
 NET "DQML"  LOC = "P17"  ;
 NET "DTACK_n"  LOC = "P56"  ;
 NET "ECLK"  LOC = "P71"  ;
+NET "FLASH_A18"  LOC = "P9"  ;
 NET "FLASH_A19"  LOC = "P96"  ;
-NET "FLASH_BANK"  LOC = "P8"  ;
+NET "FLASH_BANK_SEL"  LOC = "P8"  ;
 NET "FLASH_CE_n"  LOC = "P99"  ;
 NET "FLASH_EN_n"  LOC = "P50"  ;
 NET "IDE_ROMEN"  LOC = "P1"  ;
