CFLASH: Correct behavior for 1MB ROMs

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,3 +30,4 @@ jobs:
             Gerbers/*_bom_jlc.csv
             Gerbers/*_cpl_jlc.csv
             Binary/*.jed
+            Software/cflash/cflash
