--- a/RTL/CIDER.ucf
+++ b/RTL/CIDER.ucf
@@ -65,7 +65,8 @@ NET "MA<9>"  LOC = "P30"  ;
 NET "MEMCLK"  BUFG = "CLK" ;
 NET "MEMCLK"  LOC = "P23"  ;
 NET "MEMW_n"  LOC = "P18"  ;
-NET "OVR_n"  LOC = "P94"  ;
+NET "OVR_1_n"  LOC = "P94"  ;
+NET "OVR_2_n"  LOC = "P95"  ;
 NET "RAM_EN_n"  LOC = "P43"  ;
 NET "RAMCS_n"  LOC = "P24"  ;
 NET "RAMOE_n"  LOC = "P16"  ;
