RTL: Add Timespec for MEMCLK

--- a/RTL/CIDER.ucf
+++ b/RTL/CIDER.ucf
@@ -75,3 +75,6 @@ NET "RAS_n"  LOC = "P22"  ;
 NET "RESET_n"  LOC = "P72"  ;
 NET "RW"  LOC = "P54"  ;
 NET "UDS_n"  LOC = "P52"  ;
+
+NET "MEMCLK" TNM_NET = MEMCLK;
+TIMESPEC TS_CLK = PERIOD "MEMCLK" 50 MHz HIGH 50%;
