GH Actions: Build software & attach to release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,11 +12,48 @@ on:
   workflow_dispatch:
 
 jobs:
-  draft_release:
+  make_software:
     runs-on: ubuntu-latest
+    container: stefanreinauer/amiga-gcc
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Build Addram
+        run: make
+        working-directory: Software/addram
+      - uses: actions/upload-artifact@master
+        with:
+          name: addram
+          path: Software/addram/addram
+
+      - name: Build bootrom
+        run: make
+        working-directory: Software/bootrom
+      - uses: actions/upload-artifact@master
+        with:
+          name: bootrom
+          path: Software/bootrom/bootrom
+
+      - name: Build cflash
+        run: make
+        working-directory: Software/cflash
+      - uses: actions/upload-artifact@master
+        with:
+          name: cflash
+          path: Software/cflash/cflash
+
+  draft_release:
+    runs-on: ubuntu-latest
+    needs:
+      - make_software
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - uses: actions/download-artifact@v3
+        with:
+          path: artifacts
       - name: Zip Gerbers
         run: zip -r Gerbers.zip Gerbers
       - name: release
@@ -30,4 +67,4 @@ jobs:
             Gerbers/*_bom_jlc.csv
             Gerbers/*_cpl_jlc.csv
             Binary/*.jed
-            Software/cflash/cflash
+            artifacts/*/*
