RTL: A500 mode disables external extended rom too

--- a/RTL/CIDER.ucf
+++ b/RTL/CIDER.ucf
@@ -37,7 +37,7 @@ NET "DQML"  LOC = "P17"  ;
 NET "DTACK_n"  LOC = "P56"  ;
 NET "ECLK"  LOC = "P71"  ;
 NET "EXTEN_n"  LOC = "P10"  ;
-NET "EXTDIS"   LOC = "P11"  ;
+NET "A500"   LOC = "P11"  ;
 NET "FLASH_A18"  LOC = "P9"  ;
 NET "FLASH_A19"  LOC = "P96"  ;
 NET "FLASH_BANK_SEL"  LOC = "P8"  ;
