Rev_A1: Invert polarity of A500 and FLASH_BANK_SEL inputs

--- a/RTL/CIDER.ucf
+++ b/RTL/CIDER.ucf
@@ -37,10 +37,10 @@ NET "DQML"  LOC = "P17"  ;
 NET "DTACK_n"  LOC = "P56"  ;
 NET "ECLK"  LOC = "P71"  ;
 NET "EXTEN_n"  LOC = "P10"  ;
-NET "A500"   LOC = "P11"  ;
+NET "A500_n"   LOC = "P11"  ;
 NET "FLASH_A18"  LOC = "P9"  ;
 NET "FLASH_A19"  LOC = "P96"  ;
-NET "FLASH_BANK_SEL"  LOC = "P8"  ;
+NET "FLASH_BANK_SEL_n"  LOC = "P8"  ;
 NET "FLASH_CE_n"  LOC = "P99"  ;
 NET "FLASH_EN_n"  LOC = "P50"  ;
 NET "IDE_ROMEN"  LOC = "P1"  ;
